--- a/about.html
+++ b/about.html
@@ -24,5 +24,37 @@
       </ul>
     </nav>
   </header>
+  <footer>
+    <div class="group">
+      <div class="bio link">
+        <span>
+          <img src="images/lion.jpg">
+        </span>
+        <p>A graduate of Internet Technology, Jimit combines his education with 1 year commercial experience in CSS3, HTML5, JavaScript, WordPress, and design to produce creative and effective websites for happy clients over the world.</p>
+      </div>
+      <ul class="social link">
+        <li>
+          <a href="http://jimitpatel9.github.io./" class="ico"><i class="fa fa-github-square"></i></a>
+          <p> View <a href="http://jimitpatel9.github.io./">@JimitPatel</a> on GitHub for open-source projects.</p>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/pateljimit" class="ico"><i class="fa fa-linkedin-square"></i></a>
+          <p>View Linkedin profile <a href="https://www.linkedin.com/in/pateljimit">@JimitPatel</a></p>
+        </li>
+        <li>
+          <a href="https://twitter.com/JIMITPATEL99" class="ico"><i class="fa fa-twitter-square"></i></a>
+          <p>Follow <a href="https://twitter.com/JIMITPATEL99">@JimitPatel</a> for web design & development articles, opinions and links</p>
+        </li>
+      </ul>
+      <nav class="link">
+        <ul>
+          <li><a href="about.html">ABOUT</a><p>Learn about Jimit skills and philosophy</p></li>
+          <li><a href="index.html">PORTFOLIO</a><p>View Jimit front end development work</p></li>
+          <li><a href="contact.html">CONTACT</a><p>Send a message or project request to Ian</p></li>
+        </ul>
+      </nav>
+    </div>
+    <p class="copyright">Unless otherwise stated, content is copyright © 2015 Jimit Patel and code samples are licensed.</p>
+  </footer>
 </body>
 </html>
