--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
     </a>
     <nav>
       <ul>
-        <li><a href="#" class="selected-border">About</a></li>
-        <li><a href="index.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#" class="selected-border">ABOUT</a></li>
+        <li><a href="index.html">PORTFOLIO</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
     </nav>
   </header>
