--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
     </a>
     <nav>
       <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="index.html">Portfolio</a></li>
-        <li><a href="#" class="selected-border">Contact</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="index.html">PORTFOLIO</a></li>
+        <li><a href="#" class="selected-border">CONTACT</a></li>
       </ul>
     </nav>
   </header>
