--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,53 @@
       </ul>
     </nav>
   </header>
+  <section class="abouthead">
+    <h1>Contact Jimit Patel</h1>
+    <h2>Use the following form to send a message or project request to Ian</h2>
+  </section>
+  <div class="desc">
+    <section>
+      <h2>About you</h2>
+      <p>
+        <label for="name">Your Name</label>
+        <input type="text" class="contact-input" id="name" placeholder="eg. Jimit Patel"/>
+      </p>
+      <h2>Front End Development</h2>
+      <div class="logos">
+        <div class="logs">
+          <img src="images/css3.png">
+          <strong>CSS3</strong>
+        </div>
+        <div class="logs">
+          <img src="images/html5.png">
+          <strong>HTML5</strong>
+        </div>
+        <div class="logs">
+          <img src="images/js.png">
+          <strong>JavaScript</strong>
+        </div>
+      </div>
+      <p>I create websites that allow the user to experience your website in the best and most appropriate way suited to the device they are using. By working using <strong>progressive enhancement</strong>, a website is delivered with a <strong>responsive layout</strong> that can best make use of the space available on the smallest to largest devices. <strong>Cross browser</strong> compatibility is ensured by using feature detection so older browsers still in use today provide a solid experience, whilst modern browsers can go the next step and enhance the users time spent on your site.</p>
+      <p>Writing <strong>semantic markup</strong> that is documented and easy to read means it can be maintained and scaled in the future, and allows co-workers to quickly pick it up.</p>
+      <h2>Other Skills</h2>
+      <div class="logos">
+        <div class="logs">
+          <img src="images/jquery-small.png">
+          <strong>JQuery</strong>
+        </div>
+        <div class="logs">
+          <img src="images/sass-small.png">
+          <strong>SASS</strong>
+        </div>
+        <div class="logs">
+          <img src="images/git-small.png">
+          <strong>GIT</strong>
+        </div>
+      </div>
+      <p>For many projects I rely on tools and open-source libraries such as jQuery, SASS, Git, and Modernizr.</p>
+    </section>
+    <aside></aside>
+  </div>
   <footer>
     <div class="group">
       <div class="bio link">
