--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <span>
           <img src="images/lion.jpg">
         </span>
-        <p>A graduate of Internet Technology, Jimit combines his education with 1 year commercial experience in CSS3, HTML5, JavaScript, WordPress, and design to produce creative and effective websites for happy clients over the world.</p>
+        <p>A graduate of Computer Science, Jimit combines his education with 1 year commercial experience in CSS3, HTML5, JavaScript, WordPress, and design to produce creative and effective websites for happy clients over the world.</p>
       </div>
       <ul class="social link">
         <li>
