--- a/about.html
+++ b/about.html
@@ -24,13 +24,58 @@
       </ul>
     </nav>
   </header>
+  <section class="abouthead">
+    <h1>About Jimit Patel</h1>
+    <h2>Front End Developer</h2>
+  </section>
+  <div class="desc">
+    <section>
+      <h2>Skills</h2>
+      <p>A graduate of Computer Science, Jimit combines his education with <strong>1 year</strong> commercial experience in CSS3, HTML5, JavaScript, and design to produce creative and effective websites for happy clients over the world.</p>
+      <p>I am able to work on a project with the full scope in mind. Clients find this approach to be extremely valuable as I am able to easily integrate with and provide experience and advice on all aspects of a project.</p>
+      <h2>Front End Development</h2>
+      <div class="logos">
+        <div class="logs">
+          <img src="images/css3.png">
+          <strong>CSS3</strong>
+        </div>
+        <div class="logs">
+          <img src="images/html5.png">
+          <strong>HTML5</strong>
+        </div>
+        <div class="logs">
+          <img src="images/js.png">
+          <strong>JavaScript</strong>
+        </div>
+      </div>
+      <p>I create websites that allow the user to experience your website in the best and most appropriate way suited to the device they are using. By working using <strong>progressive enhancement</strong>, a website is delivered with a <strong>responsive layout</strong> that can best make use of the space available on the smallest to largest devices. <strong>Cross browser</strong> compatibility is ensured by using feature detection so older browsers still in use today provide a solid experience, whilst modern browsers can go the next step and enhance the users time spent on your site.</p>
+      <p>Writing <strong>semantic markup</strong> that is documented and easy to read means it can be maintained and scaled in the future, and allows co-workers to quickly pick it up.</p>
+      <h2>Other Skills</h2>
+      <div class="logos">
+        <div class="logs">
+          <img src="images/jquery-small.png">
+          <strong>JQuery</strong>
+        </div>
+        <div class="logs">
+          <img src="images/sass-small.png">
+          <strong>SASS</strong>
+        </div>
+        <div class="logs">
+          <img src="images/git-small.png">
+          <strong>GIT</strong>
+        </div>
+      </div>
+      <p>For many projects I rely on tools and open-source libraries such as jQuery, SASS, Git, and Modernizr.</p>
+    </section>
+    <aside></aside>
+  </div>
   <footer>
     <div class="group">
       <div class="bio link">
         <span>
           <img src="images/lion.jpg">
         </span>
-        <p>A graduate of Internet Technology, Jimit combines his education with 1 year commercial experience in CSS3, HTML5, JavaScript, WordPress, and design to produce creative and effective websites for happy clients over the world.</p>
+        <p>A graduate of Computer Science, Jimit combines his education with 1 year commercial experience in CSS3, HTML5, JavaScript, WordPress, and design to produce creative and effective websites for happy clients over the world.</p>
       </div>
       <ul class="social link">
         <li>
