--- a/contact.html
+++ b/contact.html
@@ -35,39 +35,25 @@
         <label for="name">Your Name</label>
         <input type="text" class="contact-input" id="name" placeholder="eg. Jimit Patel"/>
       </p>
-      <h2>Front End Development</h2>
-      <div class="logos">
-        <div class="logs">
-          <img src="images/css3.png">
-          <strong>CSS3</strong>
-        </div>
-        <div class="logs">
-          <img src="images/html5.png">
-          <strong>HTML5</strong>
-        </div>
-        <div class="logs">
-          <img src="images/js.png">
-          <strong>JavaScript</strong>
-        </div>
+      <p>
+        <label for="email">Email address</label>
+        <input type="email" class="contact-input" id="email" placeholder="eg. jimitpatel.65@gmail.com"/>
+      </p>
+      <div class="group-input">
+        <p>
+          <label for="number">Cell number or Skype username</label>
+          <input type="text" class="contact-input" id="number" placeholder="eg. 20137----- or jimitjimit2"/>
+        </p>
+        <p>
+          <label for="website">Your website</label>
+          <input type="text" class="contact-input" id="website" placeholder="eg. jimitpatel9.github.io"/>
+        </p>
       </div>
-      <p>I create websites that allow the user to experience your website in the best and most appropriate way suited to the device they are using. By working using <strong>progressive enhancement</strong>, a website is delivered with a <strong>responsive layout</strong> that can best make use of the space available on the smallest to largest devices. <strong>Cross browser</strong> compatibility is ensured by using feature detection so older browsers still in use today provide a solid experience, whilst modern browsers can go the next step and enhance the users time spent on your site.</p>
-      <p>Writing <strong>semantic markup</strong> that is documented and easy to read means it can be maintained and scaled in the future, and allows co-workers to quickly pick it up.</p>
-      <h2>Other Skills</h2>
-      <div class="logos">
-        <div class="logs">
-          <img src="images/jquery-small.png">
-          <strong>JQuery</strong>
-        </div>
-        <div class="logs">
-          <img src="images/sass-small.png">
-          <strong>SASS</strong>
-        </div>
-        <div class="logs">
-          <img src="images/git-small.png">
-          <strong>GIT</strong>
-        </div>
-      </div>
-      <p>For many projects I rely on tools and open-source libraries such as jQuery, SASS, Git, and Modernizr.</p>
+      <p>
+        <label for="project">Message/ Project description</label>
+        <textarea col="40" row="10" class="contact-input" id="project"></textarea>
+      </p>
+      <a href="contact.html" class="send">Send</a>
     </section>
     <aside></aside>
   </div>
@@ -97,7 +83,7 @@
         <ul>
           <li><a href="about.html">ABOUT</a><p>Learn about Jimit skills and philosophy</p></li>
           <li><a href="index.html">PORTFOLIO</a><p>View Jimit front end development work</p></li>
-          <li><a href="contact.html">CONTACT</a><p>Send a message or project request to Ian</p></li>
+          <li><a href="contact.html">CONTACT</a><p>Send a message or project request to Jimit</p></li>
         </ul>
       </nav>
     </div>
