--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
         <ul>
           <li><a href="about.html">ABOUT</a><p>Learn about Jimit skills and philosophy</p></li>
           <li><a href="index.html">PORTFOLIO</a><p>View Jimit front end development work</p></li>
-          <li><a href="contact.html">CONTACT</a><p>Send a message or project request to Ian</p></li>
+          <li><a href="contact.html">CONTACT</a><p>Send a message or project request to Jimit</p></li>
         </ul>
       </nav>
     </div>
