--- a/practise/index.html
+++ b/practise/index.html
@@ -1,22 +1,23 @@
 	<!DOCTYPE html>
 	<html ng-app="githubViewer">
 	<head>
-		<title>Angular</title>
+		<title>AngularJs</title>
 	</head>
-	<body ng-controller="MainCtrl">
-	<h1>{{message}}</h1>
-	{{countdown}}
-	<form ng-submit="search(username)">
-		<input type="search" placeholder="Username to search" ng-model="username">
-		<input type="submit" value="Search" ng-click="search(username)">
-	</form>
-	<div>
-		<h1>{{user.name}}</h1>
-		<img ng-src="{{user.avatar_url}}">
-	</div>
-	<div ng-include ="'userdetails.html'" ng-show="user"></div>
+	<body>
+		<h1>Github Viewer</h1>
+		<div ng-view></div>
+
+
+
+
+
+
+
 	<script src="js/angular/angular.js"></script>
+	<script src="js/angular/angular-route.min.js"></script>
 	<script src="js/jquery.min.js"></script>
+	<script src="js/app.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/github.js"></script>
 	</body>
 	</html>
