user page using route

--- a/practise/index.html
+++ b/practise/index.html
@@ -2,12 +2,6 @@
 	<html ng-app="githubViewer">
 	<head>
 		<title>AngularJs</title>
-	<script src="js/angular/angular.js"></script>
-	<script src="js/angular/angular-route.min.js"></script>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/MainCtrl.js"></script>
-	<script src="js/github.js"></script>
 	</head>
 	<body>
 		<h1>Github Viewer</h1>
@@ -19,6 +13,12 @@
 
 
 
-	
+	<script src="js/angular/angular.js"></script>
+	<script src="js/angular/angular-route.min.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/MainCtrl.js"></script>
+	<script src="js/userCtrl.js"></script>
+	<script src="js/github.js"></script>
 	</body>
 	</html>
