--- a/practise/index.html
+++ b/practise/index.html
@@ -19,6 +19,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/MainCtrl.js"></script>
 	<script src="js/userCtrl.js"></script>
+	<script src="js/repoCtrl.js"></script>
 	<script src="js/github.js"></script>
 	</body>
 	</html>
