--- a/directives/index.html
+++ b/directives/index.html
@@ -2,8 +2,9 @@
 	<html ng-app="app">
 	<head>
 		<title>AngularJs</title>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	</head>
-	<body ng-controller="mainCtrl">
+	<body ng-controller="mainCtrl" class="container">
 		<h1>Directives</h1>
 		<user-info-card></user-info-card>
 
@@ -11,10 +12,10 @@
 
 
 
-
+	<script src="js/jquery.min.js"></script>
 	<script src="js/angular/angular.js"></script>
 	<script src="js/angular/angular-route.min.js"></script>
-	<script src="js/jquery.min.js"></script>
+	
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
 	</body>
