--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -1,9 +1,12 @@
-Name: {{user.name}} </br>
-<div>Address: <br/>
-{{user.address.street}}<br/>
-{{user.address.city}}<br/>
-</div>
-<div>Friends:
-	<div ng-repeat='friend in user.friends'>{{friend}}
+<div class="panel panel-primary">
+	<div class="panel-heading">{{user.name}}</div> 
+	<div class="panel-body">
+		<div ng-show='user.address'>Address: <br/>
+		{{user.address.street}}<br/>
+		{{user.address.city}}<br/>
+		</div>
+		<div>Friends:
+			<div ng-repeat='friend in user.friends'>{{friend}}</div>
+		</div>
 	</div>
 </div>
