--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -1,12 +1,17 @@
 <div class="panel panel-primary">
 	<div class="panel-heading">{{user.name}}</div> 
 	<div class="panel-body">
-		<div ng-show='user.address'>Address: <br/>
+		<div ng-show='user.address'>
+			<h4>Address:</h4> <br/>
 		{{user.address.street}}<br/>
 		{{user.address.city}}<br/>
 		</div>
-		<div>Friends:
-			<div ng-repeat='friend in user.friends'>{{friend}}</div>
+		<div><h4>Friends:</h4>
+			<ul>
+			<li ng-repeat='friend in user.friends'>{{friend}}</li>
+			</ul>
+			<div ng-show="user.rank">{{user.rank}}</div>
+			<button class="btn btn-success" ng-click="knightMe(user)" ng-show="!user.rank">Knight Me</button>
 		</div>
 	</div>
 </div>
