--- a/directives/index.html
+++ b/directives/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body ng-controller="mainCtrl" class="container">
 		<h1>Directives</h1>
-		<user-info-card></user-info-card>
+		<user-info-card user="user1"></user-info-card>
 
 
 
