--- a/directives/index.html
+++ b/directives/index.html
@@ -7,6 +7,7 @@
 	<body ng-controller="mainCtrl" class="container">
 		<h1>Directives</h1>
 		<user-info-card user="user1"></user-info-card>
+		<user-info-card user="user2"></user-info-card>
 
 
 
