--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -1,5 +1,5 @@
 <div class="panel panel-primary">
-	<div class="panel-heading" ng-click="collapse">{{user.name}}</div> 
+	<div class="panel-heading" ng-click="collapse()">{{user.name}}</div> 
 	<div class="panel-body" ng-show="collapsed">
 		<div ng-show='user.address'>
 			<h4>Address:</h4> <br/>
