--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -1,12 +1,9 @@
 <div class="panel panel-primary">
 	<div class="panel-heading" ng-click="collapse()">{{user.name}}</div> 
 	<div class="panel-body" ng-show="collapsed">
-		<div ng-show='user.address'>
-			<h4>Address:</h4> <br/>
-		{{user.address.street}}<br/>
-		{{user.address.city}}<br/>
-		</div>
-		<div><h4>Friends:</h4>
+		<address ng-click="collapse()"></address>
+		<div>
+		<h4>Friends:</h4>
 			<ul>
 			<li ng-repeat='friend in user.friends'>{{friend}}</li>
 			</ul>
