--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
 	<div class="panel-heading" ng-click="collapse()">{{user.name}}</div> 
 	<div class="panel-body" ng-show="collapsed">
-		<address ng-click="collapse()"></address>
+		<address></address>
 		<div>
 		<h4>Friends:</h4>
 			<ul>
