--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -5,7 +5,9 @@
 		<div>
 		<h4>Friends:</h4>
 			<ul>
-			<li ng-repeat='friend in user.friends'>{{friend}}</li>
+			<li ng-repeat='friend in user.friends'>{{friend}}
+				<removeFriend></removeFriend>	
+			</li>
 			</ul>
 			<div ng-show="user.rank">{{user.rank}}</div>
 			<button class="btn btn-success" ng-click="knightMe(user)" ng-show="!user.rank">Knight Me</button>
