--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -6,7 +6,7 @@
 		<h4>Friends:</h4>
 			<ul>
 			<li ng-repeat='friend in user.friends'>{{friend}}
-				<remove-friend></remove-friend>
+				<remove-friend method="removeFriend(friend)"></remove-friend>
 			</li>
 			</ul>
 			<div ng-show="user.rank">{{user.rank}}</div>
