--- a/decoratordirectives/index.html
+++ b/decoratordirectives/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body ng-controller="mainCtrl" class="container">
 		<h1>Decorator Directives</h1>
-		<video id="vid" event-pause="handlePause()"spacebar-support controls preload="none" poster="http://media.w3.org/2010/05/sintel/poster.png">
+		<video id="vid" event-pause="handlePause(evt)"spacebar-support controls preload="none" poster="http://media.w3.org/2010/05/sintel/poster.png">
 			<source src="http://media.w3.org/2010/05/sintel/trailer.mp4" type="video/mp4"></source>
 			<source src="http://media.w3.org/2010/05/sintel/trailer.webm5" type="video/mp4"></source>	
 			<source src="http://media.w3.org/2010/05/sintel/trailer.ogv" type="video/mp4"></source>		
