--- a/bussineslogic/index.html
+++ b/bussineslogic/index.html
@@ -6,7 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body ng-controller="mainCtrl" class="container">
-		<user-tile user="user1"></user-tile>
+		<user-tile user="user1">
+		</user-tile>
 		
 		
 
