exp with isolated directives

--- a/bussineslogic/index.html
+++ b/bussineslogic/index.html
@@ -8,7 +8,8 @@
 	<body ng-controller="mainCtrl" class="container">
 		<user-tile user="user1">
 		</user-tile>
-		
+		<user-tile user="user1">
+		</user-tile>
 		
 
 
