--- a/bussineslogic/userTile.html
+++ b/bussineslogic/userTile.html
@@ -1,3 +1,3 @@
-<div class="well" ng-click="select()" ng-class="{hilight:user.selected}">
+<div class="well" ng-click="select()" ng-class="{hilight:user1.selected}">
 <h1>{{user1.name}}</h1>
 </div>
