--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -11,6 +11,7 @@
 			</ul>
 			<div ng-show="user.rank">{{user.rank}}</div>
 			<button class="btn btn-success" ng-click="knightMe(user)" ng-show="!user.rank">Knight Me</button>
+			<button ng-click="nextState()">Next State</button>
 		</div>
 	</div>
 </div>
