--- a/directives/userInfoCard.html
+++ b/directives/userInfoCard.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary">
 	<div class="panel-heading" ng-click="collapse()">{{user.name}}</div> 
-	<div class="panel-body" ng-show="collapsed">
+	<div class="panel-body" state-display="user.level" ng-show="collapsed">
 		<address></address>
 		<div>
 		<h4>Friends:</h4>
