--- a/directives/index.html
+++ b/directives/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>AngularJs</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body ng-controller="mainCtrl" class="container">
 		<h1>Directives</h1>
