--- a/transclusion/displayBox.html
+++ b/transclusion/displayBox.html
@@ -2,5 +2,7 @@
 	<div style="float:right;margin-top:15px;">
 		<i class="glyphicon glyphicon-remove" ng-click="close()" style="cursor:pointer"></i>
 	</div>
-	
+	<div ng-transclude>
+		
+	</div>
 </div>
