--- a/businesstransclusion/index.html
+++ b/businesstransclusion/index.html
@@ -6,8 +6,10 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body ng-controller="mainCtrl" class="container">
-	
-		
+		<h1>Questions</h1>
+		<my-question q="where is the rebel base?">
+			<input type="text" ng-model="baseLocation">
+		</my-question>
 		
 
 
