--- a/businesstransclusion/index.html
+++ b/businesstransclusion/index.html
@@ -7,7 +7,9 @@
 	</head>
 	<body ng-controller="mainCtrl" class="container">
 		<h1>Questions</h1>
+		{{baseLocation}}
 		<my-question q="where is the rebel base?">
+		{{baseLocation}}
 			<input type="text" ng-model="baseLocation">
 		</my-question>
 		
