--- a/transclusion/displayBox.html
+++ b/transclusion/displayBox.html
@@ -2,7 +2,13 @@
 	<div style="float:right;margin-top:15px;">
 		<i class="glyphicon glyphicon-remove" ng-click="close()" style="cursor:pointer"></i>
 	</div>
-	<div ng-transclude>
+	<!-- <div ng-transclude>
 		
-	</div>
+	</div> -->
+	<div>This is content inside</div>
+		<ul>
+			<li>Item 1</li>
+			<li>Item 2</li>
+		</ul>
+		<div>{{message}}</div>
 </div>
