transclusion with structured files

--- a/businesstransclusion/index.html
+++ b/businesstransclusion/index.html
@@ -7,10 +7,10 @@
 	</head>
 	<body ng-controller="mainCtrl" class="container">
 		<h1>Questions</h1>
-		{{answer.baseLocation}}
+		{{baseLocation}}
 		<my-question q="where is the rebel base?">
 		{{baseLocation}}
-			<input type="text" ng-model="answer.baseLocation">
+			<input type="text" ng-model="baseLocation">
 		</my-question>
 		
 
