--- a/transclusion/displayBox.html
+++ b/transclusion/displayBox.html
@@ -1,14 +1,6 @@
 <div class="well" style="width:350px" ng-hide="hidden">
-	<div style="float:right;margin-top:15px;">
+	<div style="float:right;">
 		<i class="glyphicon glyphicon-remove" ng-click="close()" style="cursor:pointer"></i>
 	</div>
-	<!-- <div ng-transclude>
-		
-	</div> -->
-	<div>This is content inside</div>
-		<ul>
-			<li>Item 1</li>
-			<li>Item 2</li>
-		</ul>
-		<div>{{message}}</div>
+	<div ng-transclude></div>
 </div>
