--- a/transclusion/index.html
+++ b/transclusion/index.html
@@ -1,21 +1,21 @@
-	<!DOCTYPE html>
-	<html ng-app="app">
-	<head>
-		<title>AngularJs</title>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-	</head>
+<!DOCTYPE html>
+<html ng-app="app">
+<head>
+	<title>AngularJs</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
 	<body ng-controller="mainCtrl" class="container">
-	<display-box>
-		<!-- <div ng-controller="innerCtrl">
-		<div>This is content inside</div>
-		<ul>
-			<li>Item 1</li>
-			<li>Item 2</li>
-		</ul>
-		<div>{{message}}</div>
-		</div> -->
-	</display-box>
+		<display-box>
+			<div ng-controller="innerCtrl">
+				<div>This is content inside</div>
+				<ul>
+					<li>Item 1</li>
+					<li>Item 2</li>
+				</ul>
+				<div>{{message}}</div>
+			</div>
+		</display-box>
 		
 		
 
@@ -23,10 +23,15 @@
 
 
 
-	<script src="js/jquery.min.js"></script>
-	<script src="js/angular/angular.js"></script>
-	<script src="js/angular/angular-route.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
+		<script src="js/vendor/jquery.min.js"></script>
+		<script src="js/angular/angular.js"></script>
+		<script src="js/angular/angular-route.min.js"></script>
+		<script src="js/vendor/bootstrap.min.js"></script>
+		<script src="js/app/app.js"></script>
+		<script src="js/routers/mainRoute.js"></script>
+		<script src="js/services/mainService.js"></script>
+		<script src="js/directives/displayBox.js"></script>
+		<script src="js/controllers/mainCtrl.js"></script>
+		<script src="js/controllers/innerCtrl.js"></script>
 	</body>
-	</html>
+</html>
