--- a/businesstransclusion/index.html
+++ b/businesstransclusion/index.html
@@ -6,12 +6,13 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body ng-controller="mainCtrl" class="container">
-		<h1>Questions</h1>
-		{{baseLocation}}
-		<my-question q="where is the rebel base?">
-		{{baseLocation}}
-			<input type="text" ng-model="baseLocation">
-		</my-question>
+		
+	<h1>Hello Plunker!</h1>
+	<my-transclude>
+	<div ng-repeat="item in items">
+		{{item}}
+	</div>
+	</my-transclude>
 		
 
 
