--- a/directives/index.html
+++ b/directives/index.html
@@ -1,24 +1,28 @@
-	<!DOCTYPE html>
-	<html ng-app="app">
-	<head>
-		<title>AngularJs</title>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-	</head>
-	<body ng-controller="mainCtrl" class="container">
-		<h1>Directives</h1>
-		<user-info-card user="user1"></user-info-card>
-		<user-info-card user="user2"></user-info-card>
+<!DOCTYPE html>
+<html ng-app="app">
+<head>
+	<title>AngularJs</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body ng-controller="mainCtrl" class="container">
+	<h1>Directives</h1>
+	<user-info-card user="user1"></user-info-card>
+	<user-info-card user="user2"></user-info-card>
 
 
 
 
 
-	<script src="js/jquery.min.js"></script>
+	<script src="js/vendor/jquery.min.js"></script>
 	<script src="js/angular/angular.js"></script>
 	<script src="js/angular/angular-route.min.js"></script>
-	
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
-	</body>
-	</html>
+	<script src="js/app/app.js"></script>
+	<script src="js/controllers/mainCtrl.js"></script>
+	<script src="js/directives/userInfoCard.js"></script>
+	<script src="js/directives/address.js"></script>
+	<script src="js/directives/stateDisplay.js"></script>
+	<script src="js/directives/removeFriend.js"></script>
+	<script src="js/vendor/bootstrap.min.js"></script>
+</body>
+</html>
