--- a/practise/index.html
+++ b/practise/index.html
@@ -15,11 +15,11 @@
 
 	<script src="js/angular/angular.js"></script>
 	<script src="js/angular/angular-route.min.js"></script>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/MainCtrl.js"></script>
-	<script src="js/userCtrl.js"></script>
-	<script src="js/repoCtrl.js"></script>
-	<script src="js/github.js"></script>
+	<script src="js/vendor/jquery.min.js"></script>
+	<script src="js/app/app.js"></script>
+	<script src="js/controllers/MainCtrl.js"></script>
+	<script src="js/controllers/userCtrl.js"></script>
+	<script src="js/controllers/repoCtrl.js"></script>
+	<script src="js/services/github.js"></script>
 	</body>
 	</html>
