--- a/userInfo/droid.html
+++ b/userInfo/droid.html
@@ -1,10 +1,11 @@
 <div class="panel panel-primary">
 	<div class="panel-heading" ng-click="collapse()"><h4>{{user.name}}</h4></div>
 	<div class="panel-body" ng-show="collapsed">
-		<address></address>
-		<h3>Friends :</h3>
-		<ul>
-			<li ng-repeat="friend in user.friends">{{friend}}</li>
-		</ul>
+		<div>
+			<h3>Specification : </h3>
+			{{user.specification.version}}<br>
+			{{user.specification.speed}}
+		</div>
+		
 	</div>
 </div>
