--- a/userInfo/index.html
+++ b/userInfo/index.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 	<body ng-controller="mainCtrl" class="container">
-		<user-info-data user="user"></user-info-data>
-		
+		<user-info-data user="user1"></user-info-data>
+		<user-info-data user="user2"></user-info-data>
+		<droid user="droid"></droid>
 
 
 
@@ -22,6 +23,8 @@
 		<script src="js/services/mainService.js"></script> -->
 		<script src="js/controllers/mainCtrl.js"></script>
 		<script src="js/directives/userInfoData.js"></script>
+		<script src="js/directives/address.js"></script>
+		<script src="js/directives/droid.js"></script>
 		
 		<!-- <script src="js/controllers/innerCtrl.js"></script> -->
 	</body>
