--- a/userInfo/index.html
+++ b/userInfo/index.html
@@ -25,6 +25,7 @@
 		<script src="js/directives/userInfoData.js"></script>
 		<script src="js/directives/address.js"></script>
 		<script src="js/directives/droid.js"></script>
+		<script src="js/directives/userPanel.js"></script>
 		
 		<!-- <script src="js/controllers/innerCtrl.js"></script> -->
 	</body>
