--- a/userInfo/userInfoData.html
+++ b/userInfo/userInfoData.html
@@ -1,10 +1,7 @@
-<div class="panel panel-primary">
-	<div class="panel-heading" ng-click="collapse()"><h4>{{user.name}}</h4></div>
-	<div class="panel-body" ng-show="collapsed">
-		<address></address>
-		<h3>Friends :</h3>
-		<ul>
-			<li ng-repeat="friend in user.friends">{{friend}}</li>
-		</ul>
-	</div>
-</div>
+<user-panel user="user">
+	<address></address>
+	<h3>Friends :</h3>
+	<ul>
+		<li ng-repeat="friend in user.friends">{{friend}}</li>
+	</ul>
+</user-panel>
