--- a/ecommerce/user.html
+++ b/ecommerce/user.html
@@ -1,5 +1,5 @@
 <header class="header">
-	<span class="logo"><img ng-src="images/logo.jpg"></span>
+	<span class="logo" ui-sref="login"><img ng-src="images/logo.jpg"></span>
 	<p>Welcome {{username}}..</p>
 </header>
 <ul class="itemList" >
