--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -7,7 +7,7 @@
 </head>
 	<body ng-controller="mainCtrl" class="container">
 
-		<div ng-view></div>
+		<div ui-view></div>
 		
 		
 
@@ -17,8 +17,9 @@
 
 		<script src="js/vendor/jquery.min.js"></script>
 		<script src="js/angular/angular.js"></script>
-		<script src="js/angular/angular-route.min.js"></script>
+		<script src="js/angular/angular-ui-router.min.js"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
+		<script src ="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.3/ui-bootstrap-tpls.min.js"></script>
 		<script src="js/app/app.js"></script>
 		<script src="js/routers/mainRoute.js"></script>
 		<script src="js/services/mainService.js"></script>
