--- a/ecommerce/userdetail.html
+++ b/ecommerce/userdetail.html
@@ -1,5 +1,5 @@
 <div class="login">
-	<span class="logo"><img ng-src="images/logo.jpg"></span>
+	<span class="logo" ui-sref="login"><img ng-src="images/logo.jpg"></span>
 	<form>
 	<p>
 		<input ng-model="username" type="text" placeholder="Username" required/>
@@ -11,8 +11,8 @@
 		<input ng-model="email" type="email" placeholder="user@domain" required/>
 	</p>
 	<div>
-		<button class="btn btn-info" ng-click="storedata()">Submit</button>
-		<button class="btn btn-info" href="#/logins">Cancel</button>
+		<button class="btn btn-info" ng-click="addUserData()">Submit</button>
+		<button class="btn btn-info" ui-sref="login">Cancel</button>
 	</div>
 	</form>
 </div>
