checkout page left

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -23,10 +23,13 @@
 		<script src="js/app/app.js"></script>
 		<script src="js/routers/mainRoute.js"></script>
 		<script src="js/services/mainService.js"></script>
+		<script src="js/services/orderdata.js"></script>
 		<script src="js/directives/displayBox.js"></script>
 		<script src="js/controllers/loginCtrl.js"></script>
 		<script src="js/controllers/userCtrl.js"></script>
 		<script src="js/controllers/mainCtrl.js"></script>
+		<script src="js/controllers/orderCtrl.js"></script>
 		<script src="js/controllers/userDetail.js"></script>
+
 	</body>
 </html>
