--- a/ecommerce/login.html
+++ b/ecommerce/login.html
@@ -10,9 +10,7 @@
 			<input ng-model="password" type="password" placeholder="Password" required/>
 		</p>
 		<div>
-			<button class="btn btn-info" ng-click="validateLogin()" 
-					ui-sref="displayProducts({username:username})">Login
-			</button>
+			<button class="btn btn-info" ng-click="validateLogin()">Login</button>
 			<button class="btn btn-info" ng-click="signupform()" 
 					ui-sref="userdetail">Sign-Up
 			</button>
