--- a/ecommerce/order.html
+++ b/ecommerce/order.html
@@ -10,10 +10,10 @@
 					<th>Remove</th>
 				</tr>
 			</thead>
-			<tr class="active" ng-repeat="item in itemList.cartItem">
+			<tr class="active" ng-repeat="item in itemList.cartItem track by itemList.cartItem.name">
 				<th><span><img ng-src="{{item.img}}"></span></th>
 				<th><p>{{item.qty}}<p></th>
-				<th><p>{{item.qty * item.price}}<p></th>
+				<th><p>{{item.qty * item.ourprice}}<p></th>
 				<th><i class="glyphicon glyphicon-remove" ng-click="removeAnItem(index)" style="cursor:pointer"></i></th>
 			</tr>
 			<tr class="active">
