update for logic
Logic for add to cart changed

--- a/ecommerce/user.html
+++ b/ecommerce/user.html
@@ -64,7 +64,7 @@
 				</tr>
 			</table>
 		</div>
-		<button class="btn btn-warning"  ng-click="add($index,item.qty)">Add To Cart</button>
+		<button class="btn btn-warning"  ng-click="add($index,item.qty,item.uid)">Add To Cart</button>
 	</li>
 	<div class="clear"></div>
 </ul>
