--- a/ecommerce/order.html
+++ b/ecommerce/order.html
@@ -10,7 +10,7 @@
 					<th>Remove</th>
 				</tr>
 			</thead>
-			<tr class="active" ng-repeat="item in itemList.cartItem track by itemList.cartItem.name">
+			<tr class="active" ng-repeat="item in itemList.cartItem">
 				<th><span><img ng-src="{{item.img}}"></span></th>
 				<th><p>{{item.qty}}<p></th>
 				<th><p>{{item.qty * item.ourprice}}<p></th>
