Check Out page update

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -29,6 +29,7 @@
 		<script src="js/controllers/mainCtrl.js"></script>
 		<script src="js/controllers/orderCtrl.js"></script>
 		<script src="js/controllers/userDetail.js"></script>
+		<script src="js/controllers/checkoutCtrl.js"></script>
 
 	</body>
 </html>
