Modified Using the fake Database

--- a/ecommerce/order.html
+++ b/ecommerce/order.html
@@ -10,8 +10,8 @@
 					<th>Remove</th>
 				</tr>
 			</thead>
-			<tr class="active" ng-repeat="item in itemList.cartItem">
-				<th><span><img ng-src="{{item.img}}"></span></th>
+			<tr class="active" ng-repeat="item in cartItemList.cartItem">
+				<th><span><img ng-src="{{item.imageUrl}}"></span></th>
 				<th><p>{{item.qty}}<p></th>
 				<th><p>${{item.qty * item.ourprice}}<p></th>
 				<th><i class="glyphicon glyphicon-remove" ng-click="removeAnItem(index)" style="cursor:pointer"></i></th>
