--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -2,8 +2,6 @@
 <html ng-app="app">
 <head>
 	<title>AngularJs</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 	<body ng-controller="mainCtrl" class="container">
 		<div ui-view></div>
@@ -13,17 +11,38 @@
 
 
 
+		<!--Style Sheets-->
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 
+
+		<!--Library Script-->
 		<script src="js/vendor/jquery.min.js"></script>
 		<script src="js/angular/angular.js"></script>
+		<script src="js/angular/angular-mocks.js"></script>
 		<script src="js/angular/angular-ui-router.min.js"></script>
+		<script src="js/angular/angular-resource.min.js"></script>
+		
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src ="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.3/ui-bootstrap-tpls.min.js"></script>
+
+
+		<!--Applications Script-->
 		<script src="js/app/app.js"></script>
+
+
+		<!--Routers-->
 		<script src="js/routers/mainRoute.js"></script>
+
+
+		<!--Services-->
+		<script src="js/app/common.services.js"></script>
+		<script src="js/services/productResource.js"></script>
+		<script src="js/app/productResourceMock.js"></script>
 		<script src="js/services/mainService.js"></script>
 		<script src="js/services/orderdata.js"></script>
-		<script src="js/directives/displayBox.js"></script>
+
+		<!--Controllers-->
 		<script src="js/controllers/loginCtrl.js"></script>
 		<script src="js/controllers/userCtrl.js"></script>
 		<script src="js/controllers/mainCtrl.js"></script>
