custom search added
also Product Details page added using the resolve in state

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -44,11 +44,13 @@
 
 		<!--Controllers-->
 		<script src="js/controllers/loginCtrl.js"></script>
-		<script src="js/controllers/userCtrl.js"></script>
+		<script src="js/controllers/productDisplayCtrl.js"></script>
 		<script src="js/controllers/mainCtrl.js"></script>
 		<script src="js/controllers/orderCtrl.js"></script>
 		<script src="js/controllers/userDetail.js"></script>
 		<script src="js/controllers/checkoutCtrl.js"></script>
-
+		<script src="js/controllers/productDetailsCtrl.js"></script>
+		<!--Filters-->
+		<script src="js/filters/productFilter.js"></script>
 	</body>
 </html>
