--- a/ecommerce/productDetails.html
+++ b/ecommerce/productDetails.html
@@ -36,7 +36,7 @@
 	<div class="panel panel-primary">
 	  <div class="panel-heading">
 	  	<span>Product :- {{product.name}}</span>
-	  	<button class="btn btn-primary" ui-sref="displayProducts"><span class="glyphicon glyphicon-chevron-left"></span> Back</button>
+	  	<button class="btn btn-primary" ui-sref="displayProducts({username:user})"><span class="glyphicon glyphicon-chevron-left"></span> Back</button>
 	  </div>
 	  <div class="panel-body">
 	  	<span>
