--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -50,6 +50,7 @@
 		<script src="js/controllers/userDetail.js"></script>
 		<script src="js/controllers/checkoutCtrl.js"></script>
 		<script src="js/controllers/productDetailsCtrl.js"></script>
+		<script src="js/controllers/homeCtrl.js"></script>
 		<!--Filters-->
 		<script src="js/filters/productFilter.js"></script>
 	</body>
