--- a/ecommerce/userdetail.html
+++ b/ecommerce/userdetail.html
@@ -10,9 +10,9 @@
 		<p>
 			<input ng-model="email" type="email" placeholder="user@domain" required/>
 		</p>
-		<div>
+		<div class="loginSignup">
 			<button class="btn btn-info" ng-click="addUserData()">Submit</button>
-			<button class="btn btn-info" ui-sref="login">Cancel</button>
+			<button class="btn btn-info" ui-sref="home.login">Cancel</button>
 		</div>
 	</form>
 </div>
