--- a/ecommerce/checkout.html
+++ b/ecommerce/checkout.html
@@ -1,7 +1,7 @@
 <div class="checkout login orderlist">
 	<span class="logo" ui-sref="login"><img ng-src="images/logo.jpg"></span>
 	<p>Be sure to click to "Ship To This Address" button</p>
-	<form>
+	<form class="checkoutForm" name="checkoutForm" novalidate>
 		<p>
 			<input ng-model="username" type="text" placeholder="Username" />
 		</p>
