--- a/ecommerce/login.html
+++ b/ecommerce/login.html
@@ -1,18 +1,17 @@
 <div class="login">
 	<span class="logo" ui-sref="login"><img ng-src="images/logo.jpg"></span>
 	<form>
-		<div ng-show="error">{{error}}</div>
-		<alert type="{{alert.type}}" close="closeAlert()" ng-show="alert">{{alert}}</alert>
+		<alert type="{{alert.type}}" ng-repeat="alert in alerts" close="closeAlert()" dismiss-on-timeout="1000" ng-show="error">{{alert.msg}}</alert>
 		<p>
 			<input ng-model="username" type="text" placeholder="Username" required/>
 		</p>
 		<p>
 			<input ng-model="password" type="password" placeholder="Password" required/>
 		</p>
-		<div>
+		<div class="loginSignup">
 			<button class="btn btn-info" ng-click="validateLogin()">Login</button>
 			<button class="btn btn-info" ng-click="signupform()" 
-					ui-sref="userdetail">Sign-Up
+					ui-sref="home.userdetail">Sign-Up
 			</button>
 		</div>
 	</form>
