--- a/ecommerce/userdetail.html
+++ b/ecommerce/userdetail.html
@@ -1,5 +1,5 @@
 <div class="login">
-	<span class="logo" ui-sref="login"><img ng-src="images/logo.jpg"></span>
+	<span class="logo" ui-sref="home.login"><img ng-src="images/logo.jpg"></span>
 	<form>
 		<p>
 			<input ng-model="username" type="text" placeholder="Username" required/>
