--- a/ecommerce/login.html
+++ b/ecommerce/login.html
@@ -1,5 +1,5 @@
 <div class="login">
-	<span class="logo" ui-sref="login"><img ng-src="images/logo.jpg"></span>
+	<span class="logo" ui-sref="home.login"><img ng-src="images/logo.jpg"></span>
 	<form>
 		<alert type="{{alert.type}}" ng-repeat="alert in alerts" close="closeAlert()" dismiss-on-timeout="1000" ng-show="error">{{alert.msg}}</alert>
 		<p>
