--- a/ecommerce/productsDisplay.html
+++ b/ecommerce/productsDisplay.html
@@ -10,7 +10,7 @@
 	      </button>
 	      <a class="navbar-brand" href="#">
 	        <!-- your branding here -->
-	        <img ng-src="images/logo.jpg" ui-sref="login" class="logo"><span>E-Shop</span>
+	        <img ng-src="images/logo.jpg" ui-sref="home.login" class="logo"><span>E-Shop</span>
 	        <div class="clear"></div>
 	      </a>
 	    </div>
