Media Query CSS updated

--- a/ecommerce/checkout.html
+++ b/ecommerce/checkout.html
@@ -1,5 +1,5 @@
 <div class="checkout login orderlist">
-	<span class="logo" ui-sref="home.login"><img ng-src="images/logo.jpg"></span>
+	<span class="logo" ui-sref="home.login"><img ng-src="images/logo.png"></span>
 	<p>Be sure to click to "Ship To This Address" button</p>
 	<form class="checkoutForm" name="checkoutForm" novalidate>
 		<fieldset>
