--- a/ecommerce/order.html
+++ b/ecommerce/order.html
@@ -1,5 +1,5 @@
 <div class="orderlist">
-	<span class="logo" ui-sref="home.login"><img ng-src="images/logo.jpg"></span>
+	<span class="logo" ui-sref="home.login"><img ng-src="images/logo.png"></span>
 	<div class="table-responsive addedList">
 		<table class="table table-condensed">
 			<thead>
