--- a/ecommerce/productsDisplay.html
+++ b/ecommerce/productsDisplay.html
@@ -42,7 +42,7 @@
 
 <ul class="itemList" >
 	<li ng-repeat="item in itemList | productFilter:searchText" ng-click="productDetails(item.pid)">
-		<img ng-src="{{item.imageUrl}}"/>
+		<img ng-src="{{item.imageUrl[0]}}"/>
 		<h4>{{item.name}}</h4>
 		<div class="table-responsive">
 			<table class="table">
