--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -12,20 +12,23 @@
 
 
 		<!--inject:css-->
-
+		<link rel="stylesheet" href="/css/animate.css">
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
-
 		<link rel="stylesheet" href="/css/main.css">
-
 		<!--endinject-->
 		<!--bower:css-->
+		<link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" />
 		<!--endbower-->
 		<!--bower:js-->
 		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+		<script src="bower_components/angular-touch/angular-touch.js"></script>
+		<script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
 		<script src="bower_components/angular-mocks/angular-mocks.js"></script>
 		<script src="bower_components/angular-resource/angular-resource.js"></script>
+		<script src="bower_components/angular-route/angular-route.js"></script>
 		<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<!--endbower-->
@@ -41,7 +44,7 @@
 		<script src="/js/controllers/productDetailsCtrl.js"></script>
 		<script src="/js/controllers/productDisplayCtrl.js"></script>
 		<script src="/js/controllers/userDetail.js"></script>
-		<script src="/js/directives/displayBox.js"></script>
+		<script src="/js/directives/usercheck.js"></script>
 		<script src="/js/filters/productFilter.js"></script>
 		<script src="/js/routers/mainRoute.js"></script>
 		<script src="/js/services/mainService.js"></script>
