--- a/ecommerce/productDetails.html
+++ b/ecommerce/productDetails.html
@@ -39,9 +39,11 @@
 	  	<button class="btn btn-primary" ui-sref="displayProducts({username:user})"><span class="glyphicon glyphicon-chevron-left"></span> Back</button>
 	  </div>
 	  <div class="panel-body">
-	  	<span>
-	  		<img ng-src="{{product.imageUrl}}" style="width:100%;height:360px;80%;">
-	  	</span>
+	  	<carousel interval="myInterval" no-wrap="noWrapSlides">
+			<slide ng-repeat="image in product.imageUrl" active="slide.active">
+				<img  ng-src="{{image}}" />
+			</slide>
+		</carousel>
 	  	<div class="table-responsive">
 				<table class="table">
 					<tr>
