--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -12,9 +12,9 @@
 
 
 		<!--inject:css-->
-		<link rel="stylesheet" href="/css/animate.css">
-		<link rel="stylesheet" href="/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/css/main.css">
+		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/main.css">
 		<!--endinject-->
 		<!--bower:css-->
 		<link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" />
@@ -33,23 +33,23 @@
 		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<!--endbower-->
 		<!--inject:js-->
-		<script src="/js/app/app.js"></script>
-		<script src="/js/app/common.services.js"></script>
-		<script src="/js/app/productResourceMock.js"></script>
-		<script src="/js/controllers/checkoutCtrl.js"></script>
-		<script src="/js/controllers/homeCtrl.js"></script>
-		<script src="/js/controllers/loginCtrl.js"></script>
-		<script src="/js/controllers/mainCtrl.js"></script>
-		<script src="/js/controllers/orderCtrl.js"></script>
-		<script src="/js/controllers/productDetailsCtrl.js"></script>
-		<script src="/js/controllers/productDisplayCtrl.js"></script>
-		<script src="/js/controllers/userDetail.js"></script>
-		<script src="/js/directives/usercheck.js"></script>
-		<script src="/js/filters/productFilter.js"></script>
-		<script src="/js/routers/mainRoute.js"></script>
-		<script src="/js/services/mainService.js"></script>
-		<script src="/js/services/orderdata.js"></script>
-		<script src="/js/services/productResource.js"></script>
+		<script src="js/app/app.js"></script>
+		<script src="js/app/common.services.js"></script>
+		<script src="js/app/productResourceMock.js"></script>
+		<script src="js/controllers/checkoutCtrl.js"></script>
+		<script src="js/controllers/homeCtrl.js"></script>
+		<script src="js/controllers/loginCtrl.js"></script>
+		<script src="js/controllers/mainCtrl.js"></script>
+		<script src="js/controllers/orderCtrl.js"></script>
+		<script src="js/controllers/productDetailsCtrl.js"></script>
+		<script src="js/controllers/productDisplayCtrl.js"></script>
+		<script src="js/controllers/userDetail.js"></script>
+		<script src="js/directives/usercheck.js"></script>
+		<script src="js/filters/productFilter.js"></script>
+		<script src="js/routers/mainRoute.js"></script>
+		<script src="js/services/mainService.js"></script>
+		<script src="js/services/orderdata.js"></script>
+		<script src="js/services/productResource.js"></script>
 		<!--endinject-->
 
 	</body>
