--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
-  <link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 
-  <script type="text/javascript" src="../assets/js/jquery-1.11.2.min.js"></script>
+  <script type="text/javascript" src="assets/js/jquery-1.11.2.min.js"></script>
 
 </head>
 
 <body>
   <header>
     <a href="index.html">
-      <img src="../assets/images/lion.jpg">
+      <img src="assets/images/lion.jpg">
       <div>
         <h2>Jimit Patel</h2>
         <h3>Front End Developer</h3>
@@ -25,30 +25,30 @@
     </a>
     <nav>
       <ul>
-        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="views/about.html">ABOUT</a></li>
         <li><a href="#" class="selected-border">PORTFOLIO</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="views/contact.html">CONTACT</a></li>
       </ul>
     </nav>
   </header>
   <section class="summary">
     <h1>Building creative & effective websites</h1>
     <h2>Specialising in Html, CSS, Sass, Bootstrap, JavaScript and performance</h2>
-    <a href="contact.html">Get In Touch</a>
+    <a href="views/contact.html">Get In Touch</a>
   </section>
   <section class="portfolio">
     <h1>PORTFOLIO</h1>
     <ul>
       <li>
-        <a href="http://jimitpatel9.github.io/city/"><img src="../assets/images/city-portfolio.png"></a>
+        <a href="http://jimitpatel9.github.io/city/"><img src="assets/images/city-portfolio.png"></a>
         <h3>REMIXED HTML5, CSS3, Media Query</h3>
       </li>
       <li>
-        <a href="http://jimitpatel9.github.io/puppybootstrap/puppy.html"><img src="../assets/images/puppy-portfolio.png"></a>
+        <a href="http://jimitpatel9.github.io/puppybootstrap/puppy.html"><img src="assets/images/puppy-portfolio.png"></a>
         <h3>REMIXED HTML5, CSS3, Bootstrap</h3>
       </li>
       <li>
-        <a href="http://jimitpatel9.github.io/puppymediaquery/puppy.html"><img src="../assets/images/puppy-portfolio.png"></a>
+        <a href="http://jimitpatel9.github.io/puppymediaquery/puppy.html"><img src="assets/images/puppy-portfolio.png"></a>
         <h3>REMIXED HTML5, CSS3, Sass, Media Query</h3>
       </li>
     </ul>
@@ -57,7 +57,7 @@
     <div class="group">
       <div class="bio link">
         <span>
-          <img src="../assets/images/lion.jpg">
+          <img src="assets/images/lion.jpg">
         </span>
         <p>A graduate of Computer Science, Jimit combines his education with 1 year commercial experience in CSS3, HTML5, JavaScript, WordPress, and design to produce creative and effective websites for happy clients over the world.</p>
       </div>
@@ -77,9 +77,9 @@
       </ul>
       <nav class="link">
         <ul>
-          <li><a href="about.html">ABOUT</a><p>Learn about Jimit skills and philosophy</p></li>
+          <li><a href="views/about.html">ABOUT</a><p>Learn about Jimit skills and philosophy</p></li>
           <li><a href="index.html">PORTFOLIO</a><p>View Jimit front end development work</p></li>
-          <li><a href="contact.html">CONTACT</a><p>Send a message or project request to Jimit</p></li>
+          <li><a href="views/contact.html">CONTACT</a><p>Send a message or project request to Jimit</p></li>
         </ul>
       </nav>
     </div>
